# small-wasm

./: Cargo.toml  README.adoc
src/: lib.rs
